manage show of the versioning